<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mockito_vendor</name>
  <version>0.0.0</version>
  <description>Provides the Mockito mocking framework.</description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>

  <!-- Both this package and Mockito are MIT -->
  <license>MIT</license>
  <url type="website">https://site.mockito.org</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_jars</buildtool_depend>

  <build_depend>ament_cmake_export_jars</build_depend>

  <depend>libmockito-java</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

